--- a/Sources/FinalList.Serialization.JsonNet/FinalList.Serialization.JsonNet.csproj
+++ b/Sources/FinalList.Serialization.JsonNet/FinalList.Serialization.JsonNet.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{5A9F6824-067E-4E26-8CBB-6AA2C112059A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FinalList.Serialization.JsonNet</RootNamespace>
+    <RootNamespace>Finalist.Serialization.JsonNet</RootNamespace>
     <AssemblyName>FinalList.Serialization.JsonNet</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
