--- a/Sources/FinalListTest/FinalListTest.csproj
+++ b/Sources/FinalListTest/FinalListTest.csproj
@@ -60,8 +60,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FinalList.Serialization.JsonNet\FinalListConverterTest.cs" />
-    <Compile Include="FinalList\FinalListAdapterTest.cs" />
+    <Compile Include="Finalist.Serialization.JsonNet\FinalListConverterTest.cs" />
+    <Compile Include="Finalist\FinalListAdapterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
