Library name changed from FinalList to Finalist. This avoids naming confilicts with the type FinalList.

--- a/Sources/Finalist.Serialization.JsonNet/Finalist.Serialization.JsonNet.csproj
+++ b/Sources/Finalist.Serialization.JsonNet/Finalist.Serialization.JsonNet.csproj
@@ -1,17 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0" DefaultTargets="Build">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D61B417F-F827-48E7-B3CF-C8F5D6410779}</ProjectGuid>
+    <ProjectGuid>{5A9F6824-067E-4E26-8CBB-6AA2C112059A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FinalListTest</RootNamespace>
-    <AssemblyName>FinalListTest</AssemblyName>
+    <RootNamespace>Finalist.Serialization.JsonNet</RootNamespace>
+    <AssemblyName>Finalist.Serialization.JsonNet</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,8 +21,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\ThedmiDefaultFxCop.ruleset</CodeAnalysisRuleSet>
-    <RunCodeAnalysis>False</RunCodeAnalysis>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,8 +30,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\ThedmiDefaultFxCop.ruleset</CodeAnalysisRuleSet>
-    <RunCodeAnalysis>False</RunCodeAnalysis>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -52,35 +47,25 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="xunit">
-      <HintPath>..\packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
-    </Reference>
-    <Reference Include="xunit.extensions">
-      <HintPath>..\packages\xunit.extensions.1.9.2\lib\net20\xunit.extensions.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Finalist.Serialization.JsonNet\FinalListConverterTest.cs" />
-    <Compile Include="Finalist\FinalListAdapterTest.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="FinalListConverter.cs" />
+    <Compile Include="JsonNetExtensions.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FinalList.Serialization.JsonNet\FinalList.Serialization.JsonNet.csproj">
-      <Project>{5A9F6824-067E-4E26-8CBB-6AA2C112059A}</Project>
-      <Name>FinalList.Serialization.JsonNet</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\FinalList\FinalList.csproj">
-      <Project>{e7f7eb38-c922-4a12-a18e-09f151e16eaa}</Project>
-      <Name>FinalList</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="FinalList.Serialization.JsonNet.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Finalist\Finalist.csproj">
+      <Project>{E7F7EB38-C922-4A12-A18E-09F151E16EAA}</Project>
+      <Name>Finalist</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
