--- a/Sources/Finalist.Serialization.JsonNet/FinalList.Serialization.JsonNet.nuspec
+++ b/Sources/Finalist.Serialization.JsonNet/FinalList.Serialization.JsonNet.nuspec
@@ -7,7 +7,7 @@
     <authors>$author$</authors>
     <owners>$author$</owners>
     <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
-    <projectUrl>https://github.com/thedmi/FinalList</projectUrl>
+    <projectUrl>https://github.com/thedmi/Finalist</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>First standalone release (separated from Belt).</releaseNotes>
@@ -15,7 +15,7 @@
     <tags>immutable, final, list, multi-threading</tags>
     <dependencies>
       <!-- TODO Change version number accordingly -->
-      <dependency id="FinalList" version="0.9.0" />
+      <dependency id="Finalist" version="0.9.0" />
     </dependencies>
   </metadata>
 </package>
