--- a/Sources/Finalist/FinalList.nuspec
+++ b/Sources/Finalist/FinalList.nuspec
@@ -7,7 +7,7 @@
     <authors>$author$</authors>
     <owners>$author$</owners>
     <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
-    <projectUrl>https://github.com/thedmi/FinalList</projectUrl>
+    <projectUrl>https://github.com/thedmi/Finalist</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>First standalone release (separated from Belt).</releaseNotes>
